[package]
name = "sanctum-payment-contract"
version = "0.0.0"
authors = ["zkBricks"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.74.0"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
